sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/Sub_Area__c.object-meta.xml
<CustomObject>
    <label>Sub-Area</label>
    <nameField>
        <label>Sub-Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>