sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kwa Ruben</fullName>
            </value>
            <value>
                <fullName>Kwa Njenga</fullName>
            </value>
            <value>
                <fullName>Viwandani</fullName>
            </value>
            <value>
                <fullName>Imara Daima</fullName>
            </value>
            <value>
                <fullName>Kware</fullName>
            </value>
            <value>
                <fullName>Gikomba</fullName>
            </value>
            <value>
                <fullName>Makadara</fullName>
            </value>
            <value>
                <fullName>Kamkunji</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Kayaba</fullName>
            </value>
            <value>
                <fullName>Mabroukie</fullName>
            </value>
            <value>
                <fullName>Mathare</fullName>
            </value>
            <value>
                <fullName>Embakasi West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>