sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/fields/Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Name</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipLabel>Sub-Areas</relationshipLabel>
    <relationshipName>Sub_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>