sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/fields/Customer_Support_Asst_Mngr_EmployeeGUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Asst_Mngr_EmployeeGUID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Asst Mngr EmployeeGUID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Sub-Areas</relationshipLabel>
    <relationshipName>Sub_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>