sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/fields/Other_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Area__c</fullName>
    <label>Other Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>