sfSandBoxCode/force-app/main/default/objects/Sub_Area__c/fields/Sales_Asst_Mngr_SF_User_Acct__c.field-meta.xml
<CustomField>
    <fullName>Sales_Asst_Mngr_SF_User_Acct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Asst Mngr SF User Acct</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Areas2</relationshipName>
    <type>Lookup</type>
</CustomField>